methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:-6: error: not found: value haveBaggle
			if (haveBaggle()) 
                            ^MethodsReturning:1: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime14.MethodsReturning'
override def run() {
             ^