methods.returning.MethodsReturning.scala.code
override def run() {

var seenBaggle = false
var sawBaggle = false

def haveBaggle():Boolean = {
  for (i<- 1 to 7) {
    forward()
    if (isOverBaggle) {
      sawBaggle = true
    }
  }
  backward(6)
  if (sawBaggle) {
    seenBaggle = true
  }
  return seenBaggle
}

haveBaggle()
    
  }



  